example/pub-priv/gloo-system/gloo-gateway-controller.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gloo-gateway-controller
    gloo: gateway-controller
  name: gateway-controller
  namespace: gloo-system
spec:
  replicas: 1
  selector:
    matchLabels:
      gloo: gateway-controller
  template:
    metadata:
      labels:
        gloo: gateway-controller
    spec:
      containers:
      - image: "quay.io/solo-io/gateway:0.20.8"
        imagePullPolicy: Always
        name: gateway-controller
        ports:
          - containerPort: 8443
            name: https
            protocol: TCP
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 10101
          capabilities:
            drop:
            - ALL
        volumeMounts:
          - mountPath: /etc/gateway/validation-certs
            name: validation-certs
        readinessProbe:
          tcpSocket:
            port: 8443
          initialDelaySeconds: 1
          periodSeconds: 2
          failureThreshold: 10
      volumes:
        - name: validation-certs
          secret:
            defaultMode: 420
            secretName: gateway-validation-certs
