example/pub-priv/gloo-system/gloo-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gloo
    gloo: gloo
  name: gloo
  namespace: gloo-system
spec:
  ports:
  - name: grpc-xds
    port: 9977
    protocol: TCP
  - name: grpc-validation
    port: 9988
    protocol: TCP
  - name: metrics-grpc
    port: 9966
    protocol: TCP
  selector:
    gloo: gloo

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gloo
    gloo: gateway-controller
  name: gateway-controller
  namespace: gloo-system
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    # this should map to projects/gateway/pkg/defaults.ValidationWebhookBindPort
    targetPort: 8443
  selector:
    gloo: gateway-controller
